--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -9,60 +9,46 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-label{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 15px;
-    letter-spacing: 1px;
-}
-
 header{
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    position: absolute;
+    position: fixed;
     top: 0%;
     width: 100%;
     padding: 15px;
     background-color: #333333;
 }
 
-img{
-    width: 200px;
+
+section {
+    padding: 25px 30px;
+    margin: 70px auto 80px auto;
+    border-radius: 10px;
+    background-color: #deddfa;
+    width: 70%;
 }
 
-div.info > div{
-    display: inline-block;
-    vertical-align: middle;
+article {
+    font-size: 15px;
+    text-align: justify;
+    line-height: 25px;
 }
 
-.info{
-    border-bottom: 1px solid black;
-    margin: 10px auto;
-    width: 90%;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.title {
+    font-size: 25px;
+    font-weight: bold;
+    color: #21243d;
+    margin-bottom: 5px;
 }
 
-#info2{
-    margin-left: 50px;
+.date {
+    color: 27496d;
+    font-style: italic;
+    font-size: 15px;
+    text-transform: uppercase;
+    text-align: end;
 }
 
-.main{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    margin: 10px auto;
-    padding: 15px;
-    text-align: center;
-    width: 40%;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-}
-
-#hobbies{
-    padding: 15px;
-}
 
 a{
     color: #ffffff;
@@ -78,17 +64,11 @@ a:hover{
     color: aquamarine;
 }
 
-li{
-    list-style-type: none;
-    padding: 5px;
-}
-
 footer{
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    /* margin: 10px; */
     padding: 5px;
-    position: absolute;
+    position: fixed;
     bottom: 0%;
     width: 100%;
     background-color: #333333;
