Added References To blog.html & Added Images To Landing Page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,12 @@ a:hover{
     color: aquamarine;
 }
 
+.fav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 li{
     list-style-type: none;
     padding: 5px;
@@ -131,6 +137,11 @@ footer > p{
 
     #hobbies > li{
         font-size: smaller;
+    }
+
+    .fav{
+        flex-direction: column;
+        margin-bottom: 70px;
     }
 
     #hobbies > div > p{
