--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -34,6 +34,10 @@ article {
     line-height: 25px;
 }
 
+p{
+    line-height: 30px;
+}
+
 .title {
     font-size: 25px;
     font-weight: bold;
@@ -62,6 +66,12 @@ a{
 
 a:hover{
     color: aquamarine;
+}
+
+section > a{
+    padding: 8px;
+    background-color: #3494E6;
+    
 }
 
 footer{
