Made Some Changes

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -117,6 +117,7 @@ textarea:hover{
     border: 1px solid black;
     margin-left: 15px;
     box-shadow: 10px 10px;
+    margin-bottom: 50px;
 }
 
 .form > form > div{
@@ -165,9 +166,10 @@ footer > p{
         font-size: smaller;
     }
 
-    p{
+    header{
+        padding: 5px;
         text-align: center;
-        font-size: 13px;
+        font-size: small;
     }
 
     #imgContainer{
@@ -176,20 +178,6 @@ footer > p{
 
     #img{
         width: 100%;
-    }
-
-    header{
-        padding: 5px;
-        text-align: center;
-        font-size: small;
-    }
-
-    #hobbies > li{
-        font-size: smaller;
-    }
-
-    #hobbies > div > p{
-        font-size: x-small;
     }
 
     div.main > h1{
@@ -204,12 +192,8 @@ footer > p{
         display: none;
     }
 
-
-    figure{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
+    .form{
+        margin-bottom: 50px;
     }
 
     footer{
